--- a/Serenity/View/TabBar.storyboard
+++ b/Serenity/View/TabBar.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,6 +15,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" name="AzulClaro"/>
                     </tabBar>
                     <connections>
                         <segue destination="QDq-nI-LiR" kind="relationship" relationship="viewControllers" id="Cbe-fO-Pj1"/>
@@ -56,4 +58,10 @@
             <point key="canvasLocation" x="-660" y="-48"/>
         </scene>
     </scenes>
+    <resources>
+        <namedColor name="AzulClaro">
+            <color red="0.3411764705882353" green="0.73333333333333328" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
+    <color key="tintColor" name="AzulClaro"/>
 </document>
