Salvando mudancas antes do merge

--- a/Serenity/View/Base.lproj/Sugestao.storyboard
+++ b/Serenity/View/Base.lproj/Sugestao.storyboard
@@ -11,7 +11,7 @@
         <!--Home-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="SugestaoViewController" customModule="Serenity" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="sugestao" id="BYZ-38-t0r" customClass="SugestaoViewController" customModule="Serenity" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -70,6 +70,9 @@
                         <barButtonItem key="rightBarButtonItem" title="Item" image="person.crop.circle" catalog="system" id="qLn-tR-jdA"/>
                     </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="NomeSugestao" destination="tK4-Hs-WIq" id="7RV-QM-qvY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
