--- a/Serenity/View/Musica.storyboard
+++ b/Serenity/View/Musica.storyboard
@@ -14,12 +14,29 @@
                     <view key="view" contentMode="scaleToFill" id="xJQ-XM-no7">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FfU-xY-SZM">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="FfU-xY-SZM" firstAttribute="trailing" secondItem="ZWd-gR-uuy" secondAttribute="trailing" id="0Ea-Vu-vC6"/>
+                            <constraint firstItem="FfU-xY-SZM" firstAttribute="leading" secondItem="ZWd-gR-uuy" secondAttribute="leading" id="8Rf-F6-jiD"/>
+                            <constraint firstItem="FfU-xY-SZM" firstAttribute="top" secondItem="ZWd-gR-uuy" secondAttribute="top" id="Cyb-zS-Z9O"/>
+                            <constraint firstItem="FfU-xY-SZM" firstAttribute="bottom" secondItem="ZWd-gR-uuy" secondAttribute="bottom" id="aRU-bU-Fop"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="ZWd-gR-uuy"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Música" image="music-note" id="IMx-HS-6AH"/>
-                    <navigationItem key="navigationItem" title="Musicas" id="cq7-tD-67U"/>
+                    <navigationItem key="navigationItem" title="Musicas" id="cq7-tD-67U">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="person.crop.circle" catalog="system" id="FXK-34-Ckg"/>
+                    </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="tableViewMusic" destination="FfU-xY-SZM" id="zbs-ur-zy0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b8Z-NV-TyI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -46,6 +63,7 @@
     </scenes>
     <resources>
         <image name="music-note" width="32" height="32"/>
+        <image name="person.crop.circle" catalog="system" width="64" height="60"/>
     </resources>
     <color key="tintColor" name="AzulClaro"/>
 </document>
