--- a/Serenity/View/CardsTableMusic/CardTableViewCell.xib
+++ b/Serenity/View/CardsTableMusic/CardTableViewCell.xib
@@ -20,7 +20,7 @@
                         <rect key="frame" x="20" y="20" width="280" height="178"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Rain" translatesAutoresizingMaskIntoConstraints="NO" id="Zpe-lf-ylf">
-                                <rect key="frame" x="0.0" y="0.0" width="280.00000000000045" height="178"/>
+                                <rect key="frame" x="0.0" y="0.0" width="280" height="178"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="178" id="Oct-gk-vUd"/>
                                 </constraints>
