--- a/Serenity/View/Exercicios.storyboard
+++ b/Serenity/View/Exercicios.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,16 +15,50 @@
                     <view key="view" contentMode="scaleToFill" id="wFp-Nh-n5j">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="c6e-iD-Mdq">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Ug8-xZ-m8L">
+                                    <size key="itemSize" width="180" height="180"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="pwU-K8-Kpj">
+                                        <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="9of-DR-gur">
+                                            <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="180" height="180"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="c6e-iD-Mdq" firstAttribute="leading" secondItem="zCj-cW-cZU" secondAttribute="leading" id="76y-66-L35"/>
+                            <constraint firstItem="zCj-cW-cZU" firstAttribute="trailing" secondItem="c6e-iD-Mdq" secondAttribute="trailing" id="CbC-1I-65I"/>
+                            <constraint firstItem="c6e-iD-Mdq" firstAttribute="top" secondItem="zCj-cW-cZU" secondAttribute="top" id="Dah-A2-nMo"/>
+                            <constraint firstItem="zCj-cW-cZU" firstAttribute="bottom" secondItem="c6e-iD-Mdq" secondAttribute="bottom" id="nmZ-ar-G2f"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="zCj-cW-cZU"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Exercícios" image="meditationIcon" id="0Tf-mw-7aI"/>
-                    <navigationItem key="navigationItem" title="Exercicios" id="3Sv-do-KcO"/>
+                    <navigationItem key="navigationItem" title="Exercicios" id="3Sv-do-KcO">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="person.crop.circle" catalog="system" id="trO-Ye-m2c"/>
+                    </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="collectionView" destination="c6e-iD-Mdq" id="TCV-cs-qgQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aFx-T7-mdn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="584.05797101449275" y="78.348214285714278"/>
+            <point key="canvasLocation" x="582.60869565217399" y="78.348214285714278"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="MoZ-F1-R7d">
@@ -46,6 +81,7 @@
     </scenes>
     <resources>
         <image name="meditationIcon" width="32" height="32"/>
+        <image name="person.crop.circle" catalog="system" width="64" height="60"/>
     </resources>
     <color key="tintColor" name="AzulClaro"/>
 </document>
